<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MainTabsFragment">

    <fragment
        android:id="@+id/MainTabsFragment"
        android:name="com.example.myapplication.MainTabsFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main_tabs">
        <action
            android:id="@+id/action_MainTabsFragment_to_SettingsFragment"
            app:destination="@id/SettingsFragment" />
        <action
            android:id="@+id/action_MainTabsFragment_to_AboutFragment"
            app:destination="@id/AboutFragment" />
    </fragment>

    <fragment
        android:id="@+id/SettingsFragment"
        android:name="com.example.myapplication.SettingsFragment"
        android:label="@string/settings_fragment_label"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/AboutFragment"
        android:name="com.example.myapplication.AboutFragment"
        android:label="About"
        tools:layout="@layout/fragment_about" />

    <!-- These remain for deep linking or backward compatibility if needed, but are primarily hosted in ViewPager -->
    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.myapplication.CheckinFragment"
        android:label="@string/first_fragment_label" />

    <fragment
        android:id="@+id/HistoryFragment"
        android:name="com.example.myapplication.HistoryFragment"
        android:label="@string/history_fragment_label" />

    <fragment
        android:id="@+id/CallScheduleFragment"
        android:name="com.example.myapplication.CallScheduleFragment"
        android:label="@string/call_schedule_fragment_label" />

    <fragment
        android:id="@+id/CommitmentFragment"
        android:name="com.example.myapplication.CommitmentFragment"
        android:label="Commitment to Change" />

</navigation>
